--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ h2 {
 }
 
 .god-details {
-	border: 1px solid white;
+	border: 0.25em solid white;
 	margin: 1em;
 	padding: 1em;
 	line-height: 2em;
